@@ -2,6 +2,10 @@ Revision history for {{$dist->name}}},
 
 {{$NEXT}}
   - Test name is now based on the generated class name (gh#18)
+  - Test now includes basic template (commented out) for tool,
+    XS and FFI tests (gh#7, gh#18)
+  - Fixed syntax error in generated alienfile recipe if you selected
+    both XS and FFI alien types (gh#18)
 
 0.04      2021-10-02 20:53:22 -0600
   - Fix bug where Changes file was generated incorrectly (gh#17)
